# hashlife

./: .gitignore  CMakeLists.txt  Makefile  README.md  conway.cpp
include/: bitwise.hpp  cells.hpp  dense_set.hpp  hash.hpp  hash_set.hpp  macrocell.hpp  static_vector.hpp
src/: cells.cpp
tests/: test-bitwise.cpp  test-cells.cpp  test-dense_set.cpp  test-hash_set.cpp  test-macrocell.cpp  test-static_vector.cpp  test.cpp
